[gd_scene load_steps=5 format=3 uid="uid://dxb7xfy5s1mxw"]

[ext_resource type="Script" path="res://main.gd" id="1_s13n8"]
[ext_resource type="PackedScene" uid="uid://c2nf75x04s51v" path="res://UI/main_menu.tscn" id="1_t28dv"]
[ext_resource type="PackedScene" uid="uid://d0mnxqe0x4pyy" path="res://UI/class_menu.tscn" id="2_l7jbt"]
[ext_resource type="AudioStream" uid="uid://ce01dsrex4mk8" path="res://arts/music/secret.mp3" id="3_a2ikq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_s13n8")

[node name="MenuBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a2ikq")
autoplay = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="UI" instance=ExtResource("1_t28dv")]

[node name="ClassMenu" parent="UI" instance=ExtResource("2_l7jbt")]
visible = false

[connection signal="game_start" from="UI/MainMenu" to="." method="_on_main_menu_game_start"]
